--- a/modules/dbparser/Makefile.am
+++ b/modules/dbparser/Makefile.am
@@ -5,6 +5,8 @@ modules_dbparser_libsyslog_ng_patterndb_la_SOURCES	=	\
 	modules/dbparser/radix.h				\
 	modules/dbparser/patterndb.c				\
 	modules/dbparser/patterndb.h				\
+	modules/dbparser/pdb-error.c				\
+	modules/dbparser/pdb-error.h				\
 	modules/dbparser/pdb-load.c				\
 	modules/dbparser/pdb-load.h				\
 	modules/dbparser/pdb-rule.c				\
