dbparser: extract pdb_file_detect_version into a new module pdb-file
Signed-off-by: Balazs Scheidler <balazs.scheidler@balabit.com>

--- a/modules/dbparser/Makefile.am
+++ b/modules/dbparser/Makefile.am
@@ -7,6 +7,8 @@ modules_dbparser_libsyslog_ng_patterndb_la_SOURCES	=	\
 	modules/dbparser/patterndb.h				\
 	modules/dbparser/pdb-error.c				\
 	modules/dbparser/pdb-error.h				\
+	modules/dbparser/pdb-file.c				\
+	modules/dbparser/pdb-file.h				\
 	modules/dbparser/pdb-load.c				\
 	modules/dbparser/pdb-load.h				\
 	modules/dbparser/pdb-rule.c				\
